--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,9 @@ title: ShadowCreator250 @ GitHub
 author:
   name: ShadowCreator250
   email: shadowcreator250+github@gmail.com
+
+minima:
+  date_format: "%d.%m.%Y, %H:%M:%S"
+  social_links:
+    github: SHadowCreator250
+    youtube_channel_name: SHadowCreator250
