--- a/_config.yml
+++ b/_config.yml
@@ -7,5 +7,5 @@ author:
 minima:
   date_format: "%d.%m.%Y, %H:%M:%S"
   social_links:
-    github: SHadowCreator250
-    youtube_channel_name: SHadowCreator250
+    github: ShadowCreator250
+    youtube_channel_name: ShadowCreator250
