--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,12 @@
 title: ShadowCreator250 @ GitHub
 author:
   name: ShadowCreator250
-  email: shadowcreator250+github@gmail.com
+  email: shadowcreator250@gmail.com
+description: > # this means to ignore newlines until "show_excerpts:"
+  Write an awesome description for your new site here. You can edit this
+  line in _config.yml. It will appear in your document head meta (for
+  Google search results) and in your feed.xml site description.
+show_excerpts: false # set to true to show excerpts on the homepage
 
 theme: minima
 minima:
